centered layout, fixed text wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,11 @@
     margin: 0px;
 }
 
+html {
+    display: flex;
+    justify-content: center;
+}
+
 #nav-traces {
     display: flex;
     flex-wrap: wrap;
@@ -18,6 +23,7 @@ body {
     padding: 14px;
     min-height: 100vh;
     max-width: 900px;
+    flex: 1;
 }
 
 .header {
@@ -58,7 +64,7 @@ p {
     font-family: 'Courier New', Courier, monospace;
     font-size: 12px;
     max-width: 800px;
-    word-wrap: break-word;
+    word-break: break-word;
 }
 
 #code-highlight {
@@ -93,16 +99,19 @@ p {
   border: 1px solid #ccc;
   font-family: 'Courier New', Courier, monospace;
   font-size: 12px;
-  max-width: 300px;
+  max-width: 400px;
+  word-break: break-word;
 }
 
 .column.left {
   flex: 0 0 45%;
+  word-break: break-word;
 }
 
 .column.right {
   flex: 1; /* Flex right column to take remaining space */
-  min-width: 30rem;
+  /* min-width: 30rem; */
+  word-break: break-word;
 }
 
 .tbl-header {
